<resources>
    <string name="app_name">出趣玩</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">&lt;</string>
    <string name="grass">已打卡</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register_failed">"Register failed"</string>
    <string name="register_successful">"Register successful"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_successful">"Login successful"</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="remember_password">Remember account and password</string>
    <string name="input_account">Please enter your account</string>
    <string name="input_password">Please enter your password</string>
    <string name="input_new_password">Please re-enter your password</string>
    <string name="account">Account name</string>
    <string name="password">password</string>
    <string name="new_password">Confirm password</string>
    <string name="count_try">remaining number of attempts:</string>
    <string name="account_or_password_is_invalid">account or password is invalid</string>
    <string name="enter_act_and_psw">Please enter your account and password</string>
    <string name="makesure">Please make sure the password is entered consistently</string>

</resources>