<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/traceroute_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:background="@color/white"
    android:windowSoftInputMode="adjustResize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dingbu">
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="欢迎注册出趣玩"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textSize="30sp"/>
    <View
        android:layout_width="215dp"
        android:layout_height="4dp"
        android:background="#FB6332"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_account"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/input_account"
            android:textSize="18sp"
            android:theme="@style/MyEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:theme="@style/MyEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="4"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:theme="@style/MyEditText"/>
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:gravity="right">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已有账号，"
        android:layout_gravity="right"
        />
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="立即登录"
        android:layout_gravity="right"
        android:textColor="@color/teal_200"
        android:layout_marginRight="15dp"
        />
    </LinearLayout>
</LinearLayout>