<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:orientation="vertical"
    android:windowSoftInputMode="adjustResize"

    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@mipmap/dingbu">

<!--    <ImageView-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:background="@drawable/login"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        ></ImageView>-->
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登录"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="30sp"/>
    <View
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:background="#FB6332"
        android:layout_marginLeft="30dp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/input_account"
        android:textSize="18sp"
        android:theme="@style/MyEditText"
        />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:gravity="right"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:theme="@style/MyEditText"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">


    <CheckBox
        android:id="@+id/rememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/CheckBox"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="18sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <TextView
        android:id="@+id/count_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/count_try"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:editable="false"
        android:theme="@style/MyEditText"
        android:textSize="18sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:text="@string/action_sign_in_short"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:gravity="right">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="还没有账号？"
        android:layout_gravity="right"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="马上注册"
        android:layout_gravity="right"
        android:textColor="@color/teal_200"
        android:layout_marginRight="15dp"
        />
</LinearLayout>

</LinearLayout>